# job-insight-collector

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build_company_100.py  build_company_profiles.py  build_interview_github.py  build_interview_meta_only.py  build_salary_100.py  build_salary_docs.py  cli.py  config.yaml  debug_niuke_selectors.py  diagnose.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
src/: __init__.py  auth.py  browser.py  config.py  exporter.py  parser.py  scraper.py
src/pipeline/: chunk_builder.py  ragforge_client.py
src/scrapers/boss/: parser.py  scraper.py
src/scrapers/github/: parser.py  repo_scraper.py
src/scrapers/niuke/: auth.py  interview_parser.py  interview_scraper.py  salary_parser.py  salary_scraper.py
tests/: test_unit.py
